# otus-task10

./: CMakeLists.txt  Doxyfile  README.md  annotated.html  basestate_8cpp.html  basestate_8h.html  basestate_8h__dep__incl.map  basestate_8h__dep__incl.md5  basestate_8h_source.html  builder_8cpp.html  builder_8cpp__incl.map  builder_8cpp__incl.md5  builder_8h.html  builder_8h__incl.map  builder_8h__incl.md5  builder_8h_source.html  class_base_state-members.html  class_base_state.html  class_base_state__coll__graph.map  class_base_state__coll__graph.md5  class_client_data_factory-members.html  class_client_data_factory.html  class_client_data_factory__coll__graph.map  class_client_data_factory__coll__graph.md5  class_cmd_processor-members.html  class_cmd_processor.html  class_cmd_processor__coll__graph.map  class_cmd_processor__coll__graph.md5  class_cmd_processor__inherit__graph.map  class_cmd_processor__inherit__graph.md5  class_i_cmd_processor-members.html  class_i_cmd_processor.html  class_i_cmd_processor__coll__graph.map  class_i_cmd_processor__coll__graph.md5  class_i_cmd_processor__inherit__graph.map  class_i_cmd_processor__inherit__graph.md5  class_limited_state-members.html  class_limited_state.html  class_limited_state__coll__graph.map  class_limited_state__coll__graph.md5  (+128 more)
src/: CMakeLists.txt  basestate.cpp  basestate.h  builder.cpp  builder.h  clientdata.h  clientdatafactory.cpp  clientdatafactory.h  cmdprocessor.cpp  cmdprocessor.h  icmdprocessor.h  ioutput.h  limitedstate.cpp  limitedstate.h  logoutput.cpp  logoutput.h  main.cpp  server.cpp  server.h  (+4 more)
(+37 files in other folders)
